# ros2-autonomous-explorer

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  package.xml
config/: nav2_explore_params.yaml
launch/: auto_explore.launch.py
src/: frontier_explorer.py
